fix slideshow gap and peekaboo padding

--- a/assets/base.css
+++ b/assets/base.css
@@ -1107,10 +1107,6 @@ summary::-webkit-details-marker {
     width: calc(50% - 3.75rem / 2);
   }
 
-  .grid--peek .grid__item {
-    padding-left: var(--grid-mobile-horizontal-spacing);
-  }
-
   .grid--peek .grid__item:first-of-type {
     padding-left: 1.5rem;
   }
